<resources>
    <string name="app_name">CustoViagem</string>
    <string name="distancia">Distância</string>
    <string name="total_quilometros">Total de quilômetros</string>
    <string name="preco">Preço</string>
    <string name="preco_litro">Preço por litro</string>
    <string name="autonomia">Autonomia</string>
    <string name="kms_por_litro">KMs por litro</string>
    <string name="gasto_total">Seu gasto total será:</string>
</resources>