<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">

    <EditText
        android:layout_width="match_parent"
        android:hint="@string/distancia"
        android:layout_marginTop="8dp"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_marginTop="4dp"
        android:gravity="center"
        android:text="@string/total_quilometros"
        android:layout_height="wrap_content"/>

    <EditText
        android:layout_width="match_parent"
        android:hint="@string/preco"
        android:layout_marginTop="32dp"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_marginTop="4dp"
        android:gravity="center"
        android:text="@string/preco_litro"
        android:layout_height="wrap_content"/>

    <EditText
        android:layout_width="match_parent"
        android:hint="@string/autonomia"
        android:layout_marginTop="32dp"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_marginTop="4dp"
        android:gravity="center"
        android:text="@string/kms_por_litro"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:text="@string/gasto_total"
        android:textAllCaps="true"
        android:textColor="#3F51B5"
        android:textSize="24sp"
        android:layout_height="wrap_content"/>

</LinearLayout>